--- a/msajuice/src/main/res/layout/activity_juice_detail.xml
+++ b/msajuice/src/main/res/layout/activity_juice_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".JuiceDetailActivity">
+    tools:context=".Activities.JuiceDetailActivity">
 
     <ImageView
         android:id="@+id/image_view_detail_juice"
