--- a/msajuice/src/main/res/layout/activity_juice_main.xml
+++ b/msajuice/src/main/res/layout/activity_juice_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JuiceMainActivity">
+    tools:context=".Activities.JuiceMainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_juice"
