--- a/msapizza/src/main/res/layout/activity_pizza_detail.xml
+++ b/msapizza/src/main/res/layout/activity_pizza_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PizzaDetailActivity">
+    tools:context=".Activities.PizzaDetailActivity">
 
     <ImageView
         android:id="@+id/image_view_detail_pizza"
